bump test memory and permgen
end-to-end test has its own SparkContext, maybe bringing extra
memory use?